--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -32,7 +32,7 @@
       <div class="navbar-inner">
         <div class="container-narrow">
           <a class="brand" href="{{ HOME_PATH }}">{{ site.title }}</a>
-          <a href="http://www.hsph.harvard.edu"><img src="http://cdn2.sph.harvard.edu/wp-content/uploads/sites/5/2015/05/HarvardChan_logo_stack_RGB_Small.png" width="200" height="60" alt="Site logo" pagespeed_url_hash="2699053971" align = "right">
+          <!--<a href="http://www.hsph.harvard.edu"><img src="http://cdn2.sph.harvard.edu/wp-content/uploads/sites/5/2015/05/HarvardChan_logo_stack_RGB_Small.png" width="200" height="60" alt="Site logo" pagespeed_url_hash="2699053971" align = "right">-->
 </a>
           <ul class="nav">
               <li><a href="{{ BASE_PATH }}/index.html">Home</a></li>
