--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -36,12 +36,12 @@
 </a>
           <ul class="nav">
               <li><a href="{{ BASE_PATH }}/index.html">Home</a></li>
-              <li><a href="{{ BASE_PATH }}/pages/lectures.html">Lectures</a></li>
               <li><a href="{{ BASE_PATH }}/pages/syllabus.html">Syllabus</a></li>
-              <li><a href="https://github.com/datasciencelabs/2018">GitHub</a></li>
-              <li><a href="{{ BASE_PATH }}/pages/homework.html">Homework</a></li>
-              <li><a href="{{ BASE_PATH }}/pages/projects.html">Projects</a></li>
-              <li><a href="{{ BASE_PATH }}/pages/resources.html">Resources</a></li>
+              <li><a href="{{ BASE_PATH }}/pages/lectures.html">Lectures</a></li>
+              <li><a href="https://github.com/nserhanaydin/intro2datascience">GitHub Repo</a></li>
+              <li><a href="{{ BASE_PATH }}/pages/homework.html">Assignments</a></li>
+              <li><a href="{{ BASE_PATH }}/pages/projects.html">Project</a></li>
+              <!--<li><a href="{{ BASE_PATH }}/pages/resources.html">Resources</a></li>-->
           </ul>
         </div>
       </div>
