--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -38,7 +38,7 @@
               <li><a href="{{ BASE_PATH }}/index.html">Home</a></li>
               <li><a href="{{ BASE_PATH }}/pages/syllabus.html">Syllabus</a></li>
               <li><a href="{{ BASE_PATH }}/pages/lectures.html">Lectures</a></li>
-              <li><a href="https://github.com/nserhanaydin/intro2datascience">GitHub Repo</a></li>
+              <li><a href="https://github.com/nserhanaydin/intro2datascience">GitHub</a></li>
               <li><a href="{{ BASE_PATH }}/pages/homework.html">Assignments</a></li>
               <li><a href="{{ BASE_PATH }}/pages/projects.html">Project</a></li>
               <!--<li><a href="{{ BASE_PATH }}/pages/resources.html">Resources</a></li>-->
